# ModelViewer

./: .gitattributes  CMakeLists.txt  main.cpp
include/: Animation.h  Channel.h  Joint.h  Key.h  Model.h  Skeleton.h  Skin.h  Triangle.h  Vertex.h  Window.h
shaders/: shader.frag  shader.vert
skel/: Character.skel  TestModel.skel  TestModel.skin  wasp.skel
src/: Animation.cpp  Channel.cpp  Cube.cpp  Joint.cpp  Key.cpp  Skeleton.cpp  Skin.cpp  Tokenizer.cpp  Triangle.cpp  Vertex.cpp  Window.cpp
